@@ -1,5 +1,7 @@
 *SVN*
 
+* Don't retry failed connections if an explicit auth_methods list is given [Chris Farms]
+
 * Added support for load and exit callbacks, which get invoked when all recipes have been loaded and when all requested tasks have been executed [Jamis Buck]
 
 * Added support for start and finish callbacks, which get invoked when any task is called via the command-line [Jamis Buck]
